--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
     "lite-server": "^2.3.0"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.4.1",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "popper.js": "^1.12.9",
     "wget": "0.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kmschultz/NuCamp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kmschultz/NuCamp/issues"
+  },
+  "homepage": "https://github.com/kmschultz/NuCamp#readme"
 }
